--- a/WebContent/css/index.css
+++ b/WebContent/css/index.css
@@ -1,1 +1,98 @@
 @charset "UTF-8";
+
+table {
+    border-collapse: collapse;
+    border-color: black;
+}
+
+th.cal {
+    font-size: 80%;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    min-width: 160px;
+}
+
+th.sch_info {
+    height: 32px;
+}
+
+td {
+    vertical-align: top;
+    font-size: 85%;
+    padding: 5px;
+    min-width: 130px;
+    max-height:120px;
+}
+td.check {
+    padding: unset;
+    text-align: center;
+    vertical-align: middle;
+}
+tr.cal {
+    height: 125px;
+}
+
+tr.day {
+    height: auto !important;
+}
+
+div.date {
+    font-size: 120%;
+    font-weight: bold;
+    margin-bottom: 3px;
+}
+
+div.gray {
+    color: gray;
+}
+
+div.reserve {
+    font-size: 85%;
+}
+
+div.reserve div {
+    margin-top: 2px;
+    color: black !important;
+}
+
+.holyday {
+    background-color: #FFCCCC;
+    color: red;
+}
+
+.saturday {
+    background-color: #99CCFF;
+    color: blue;
+}
+.now {
+    background-color: #FFFFCC;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(152, 152, 152, 0.7);
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+}
+
+.post_process {
+    display: none;
+    position: fixed;
+    z-index: 15;
+    top: 30%;
+    left: 50%;
+    width: 600px;
+    height: auto;
+    padding: 10px;
+    background-color: #FFF;
+    border-radius: 8px;
+    -webkit-transform: translate(-50%, -10%);
+    transform: translate(-50%, -10%);
+    color: black;
+    font-size: 1.3rem;
+    border: 2px solid #5C5C5C;
+}
